# CnidarianRogue

./: .gitignore  CMakeLists.txt  README.md  plans.txt
Debug/: CMakeCache.txt  Makefile  Roguelike  cmake_install.cmake
Debug/src/: Makefile  cmake_install.cmake
include/: Game.h
include/Adventure/: Adventure.h  PlayerManager.h
include/Adventure/Scene/: AIRunner.h  ActorManager.h  EffectManager.h  ItemManager.h  Scene.h  TurnQueue.h  TurnRunner.h
include/Algorithms/: FoV.h  FpsCounter.h  Fraction.h  Pathfinding.h  PathfindingRoute.h  PathingSpecs.h  Randomizer.h  TerrainGenerator.h  TerrainGenerators.h
include/Entities/: AI.h  ActorEntity.h  ActorFactory.h  ActorStatBlock.h  Components.h  Damage.h  Effect.h  EffectFactory.h  Entity.h  EntityColiseum.h  EntityDescriber.h  ItemEntity.h  ItemFactory.h  ItemManager.h
include/Entities/Abilities/: Ability.h  AbilityFactory.h  AbilityManager.h
include/Entities/Actors/: AI.h  ActorDescriber.h  ActorEntity.h  ActorFactory.h  ActorStatBlock.h  ActorUtils.h  Inventory.h
include/Entities/Effects/: Effect.h  EffectDescriber.h  EffectFactory.h  EffectList.h
include/Entities/Items/: ItemDescriber.h  ItemEntity.h  ItemFactory.h
include/Enums/: AsciiSymbols.h  PlayerCommands.h  TurnTime.h
include/EventListener/: Blabber.h  Listener.h
include/GameObjects/: AI.h  Ability.h  Actor.h  GeneralComponents.h  Item.h
include/GraphicsThings/: Color.h  ColorLibrary.h  ColorMap.h  ColorPalette.h  GameText.h  GameTextMaker.h  MyColor.h  Palette.h  SDLHelper.h  TextRenderer.h  TileDisplay.h
include/Interface/: GameWindow.h  InputConfirmer.h  InputManager.h
include/Interface/UIScreens/: AdventureUI.h  ConfirmerUI.h  ExitConfirmerUI.h  FpsUI.h  GameOverUI.h  LookUI.h  MapUI.h  MessagesUI.h  PlayerUI.h  SceneUI.h  Scroller.h  TextRenderer.h  TwoButtonPopupUI.h
include/Logs/: DebugLogger.h  GameLog.h
include/PlayerManager/: PlayerManager.h
include/Scene/: ActorManager.h  ActorPool.h  Scene.h  TurnQueue.h
include/Topography/: LocalMap.h  MapDisplay.h  TerrainDescriber.h  TerrainMap.h  TerrainNameCatalogue.h  TileCoordinates.h
include/UIScreens/: AdventureUI.h  ConfirmerUI.h  MapUI.h  MessagesUI.h  PlayerUI.h  RectFiller.h  SceneUI.h  TextRenderer.h
src/: AI.cpp  AIRunner.cpp  AIStateLogic.cpp  AbilityFactory.cpp  AbilityManager.cpp  Actor.cpp  ActorDescriber.cpp  ActorEntity.cpp  ActorFactory.cpp  ActorManager.cpp  ActorPool.cpp  ActorStatBlock.cpp  ActorUtils.cpp  Adventure.cpp  AdventureUI.cpp  Blabber.cpp  CMakeLists.txt  Color.cpp  ColorLibrary.cpp  ColorPalette.cpp  ConfirmerUI.cpp  Damage.cpp  DebugLogger.cpp  Dice.cpp  Effect.cpp  EffectDescriber.cpp  EffectFactory.cpp  EffectList.cpp  EffectManager.cpp  Entity.cpp  ExitConfirmerUI.cpp  FoV.cpp  FpsCounter.cpp  FpsUI.cpp  Fraction.cpp  Game.cpp  GameLog.cpp  GameOverUI.cpp  GameText.cpp  GameTextMaker.cpp  (+33 more)
tests/DataStorage/: DataShelf.h.gch  DataStorageTest.cpp  TestActor.h  TestActor.h.gch  a.out  ideas.txt
tests/Dice/: Dice.cpp  Dice.h  Randomizer.cpp  Randomizer.h  a.out  main.cpp
tests/EntitiesAsArenas/: ArenaEntities.h  ArenaTest.cpp  Entity.cpp  Entity.h  EntityColiseum.h  EntityItem.cpp  EntityItem.h  TestComponents.h  Tests.cpp  Tests.h  a.out  idea.txt  main.cpp
tests/ExampleEntities/: TestComponents.h  TestComponents.h.gch  TestItems.cpp  TestItems.h
tests/ItemFactory/: DataShelf.h  ItemFactory.h  ItemFactoryTests.cpp  TestComponents.h  TestItems.h  ideas.txt
tests/TurnQueue/: EffectList.cpp  EffectList.h  TestActor.h  TestStructures.h  TurnQueue.cpp  TurnQueue.h  a.out  main.cpp
